--- a/src/Acme/BlogBundle/Resources/views/Author/newAuthor.html.twig
+++ b/src/Acme/BlogBundle/Resources/views/Author/newAuthor.html.twig
@@ -1,7 +1,7 @@
 {% block content %}
     <h1>Create Page Form</h1>
     {%  if (form is not null) %}
-    <form action="{{ url('api_1_post_page') }}" method="POST" {{ form_enctype(form) }}>
+    <form action="{{ url('api_1_post_author') }}" method="POST" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
         <input type="submit" value="submit">
     </form>
